<resources>
    <string name="app_name">Abc</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">NEXT</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gallery">Gallery</string>
    <string name="our_location">Our Location</string>
    <string name="testimonials">Testimonials</string>
    <string name="contact_us">Contact Us</string>
    <string name="communicate">Communicate</string>
</resources>
