<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/viewgallery"

            android:title="@string/gallery" />
        <item
            android:id="@+id/ourlocation"

            android:title="@string/our_location" />
        <item
            android:id="@+id/testimonials"

            android:title="@string/testimonials" />
        <item
            android:id="@+id/contactus"
            android:title="@string/contact_us" />
</group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
